@@ -5,6 +5,7 @@ New features:
 A......... [ZBX-7345] removed deprecated API features (Pavels)
 
 Bug fixes:
+........S. [ZBX-7204] fixed the timestamp order of events generated during network discovery (igors)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.2rc1
